# london-data-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_DICTIONARY.md  PRESENTATION_SCRIPT.md  README.md  architecture.drawio  docker-compose.yml  explicacion_pipeline.md  pyproject.toml
cloud/: README.md
cloud/dags/: forest_pipeline_dag.py
cloud/dbt/: Dockerfile  dbt_project.yml  profiles.yml
cloud/dbt/models/: schema.yml
cloud/dbt/models/staging/: sources.yml  (+7 more)
cloud/functions/fn_extract_airquality/: main.py
cloud/functions/fn_extract_bankholidays/: main.py  pipeline_logger.py
cloud/functions/fn_extract_countries/: main.py  requirements.txt
cloud/functions/fn_extract_crime/: main.py
cloud/functions/fn_extract_news/: main.py
cloud/functions/fn_extract_tfl/: main.py
cloud/functions/fn_extract_weather/: main.py  quality.py
cloud/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
dags/: __init__.py
extractors/: __init__.py  base.py
local/: .env.example  README.md  docker-compose.yml
local/dags/: __init__.py  forest_pipeline_dag.py
local/extractors/: __init__.py  air_quality.py  bank_holidays.py  countries.py  crime.py  news.py  tfl.py  weather.py
local/extractors/tests/: __init__.py  test_air_quality.py  test_bank_holidays.py  test_countries.py  test_crime.py  test_news.py  test_tfl.py  test_weather.py
local/loaders/: __init__.py  postgres_loader.py
local/sql/: init_tables.sql
local/utils/: __init__.py  data_quality.py
plugins/: __init__.py
scripts/: backfill.py  init-db.sql
tests/: __init__.py  conftest.py
(+20 files in other folders)
